@@ -2,6 +2,7 @@ V1.XX.X
 [QMS-656] TMS/WMTS: Fix loosing layer selection when reloading maps
 [QMS-668] MacOS build adapted to new gdal version and new brew packages
 [QMS-675] The label colors defined in the TYP are not used
+[QMS-680] Fix: Sending multiple selected projects to device
 [QMS-683] Fix alglib error on interpolation
 
 V1.17.1
